docs/CKS/networkpolicy/allow-pod2ns-tag.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-access
  namespace: red-team
spec:
  podSelector:
    name: user-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: qa
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          env: test
